--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </div>
         </div>
       </section>
-      <section class="parallax-container bg-gray-600" data-parallax-img="images/parallax-img-2.jpg">
+      <section class="parallax-container bg-gray-600" data-parallax-img="images/img-1.jpg">
         <div class="parallax-content section-xxl text-center">
           <div class="container">
             <div class="row justify-content-md-center">
